Fixed minor bug with scrollbar i drawer

--- a/src/App.css
+++ b/src/App.css
@@ -73,7 +73,7 @@ h3 {
   width: 300px;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);
   z-index: 4;
-  overflow-y: scroll;
+  overflow-y: auto;
   height: 100%;
   transition: 500ms;
   transition-timing-function: cubic-bezier(.4, 0, .2, 1);
